--- a/linear_regression/LinearRegression.ipynb
+++ b/linear_regression/LinearRegression.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,14 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +38,7 @@
        "       55.14218841, 52.21179669, 39.29956669, 48.10504169, 52.55001444])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,15 +49,8 @@
     "for i in points: #insert x and y elements from points to X and Y arrays\n",
     "    X = np.append(X, i[0])\n",
     "    Y = np.append(Y, i[1])\n",
-    "X[:10]"
+    "X[:10] #Printing first ten values of X"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -96,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,12 +94,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Find the most optimus values for b and m\n",
+    "num_data = len(points) # 100 \n",
+    "def cost(b, m, points):\n",
+    "    error = 0\n",
+    "    for i in range(0, len(points)):\n",
+    "        x = X[j]\n",
+    "        y = Y[j]\n",
+    "        error += (y - (m * x + b)) ** 2\n",
+    "    return (error / float(num_data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b: 0.3239436244645088, m:1.4731250921538916\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Find the optimus values for b and m\n",
     "for i in range(num_iterations):\n",
+    "    costo = cost(b, m, points)\n",
+    "    #print(\"iteration: {}, cost: {}\".format(i, costo))\n",
     "    b_gradient = 0\n",
     "    m_gradient = 0\n",
     "    N = float(len(points))\n",
@@ -123,32 +135,33 @@
     "        b_gradient += -(2/N) * (y - ((m * x) + b)) #derivada respecto a b\n",
     "        m_gradient += -(2/N) * x * (y - ((m * x) + b)) # derivada respecto a m\n",
     "    b = b - (learning_rate * b_gradient)\n",
-    "    m = m - (learning_rate * m_gradient)"
+    "    m = m - (learning_rate * m_gradient)\n",
+    "print(\"b: {}, m:{}\".format(b, m))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "100"
+       "262.50208033370177"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(points)"
+    "cost(b, m, points)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -172,13 +185,6 @@
     "ax.plot(X, line)\n",
     "plt.show() #show the graphic, in normal .py file"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
