Adding pandas tutorial

--- a/basic_datascience/panda_tutorial/PandasAvocado.ipynb
+++ b/basic_datascience/panda_tutorial/PandasAvocado.ipynb
@@ -9,17 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "345\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -29,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +79,7 @@
        "1   Scout  Dalmatian         59         25    2019-05-09"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +153,7 @@
        "1   Scout  Dalmatian         59         25    2019-05-09"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +324,7 @@
        "4  2015  Albany  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +504,7 @@
        "2015-11-29  conventional  2015  Albany  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +658,7 @@
        "4     6183.95     5986.26      197.69          0.0  conventional  2015  Albany  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -679,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1049,7 +1041,7 @@
        "14  2015  Albany  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1061,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1314,7 +1306,7 @@
        "18248  WestTexNewMexico  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1325,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1363,7 +1355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1381,7 +1373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1567,7 +1559,7 @@
        "max     2018.000000  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1578,7 +1570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1594,7 +1586,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1606,7 +1598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -1636,7 +1628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1655,7 +1647,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1671,7 +1663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1690,7 +1682,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1702,7 +1694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1978,7 +1970,7 @@
        "[18249 rows x 14 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1990,7 +1982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -2010,7 +2002,7 @@
        "Name: AveragePrice, Length: 18249, dtype: float64"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2022,7 +2014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2128,7 +2120,7 @@
        "[18249 rows x 2 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2140,7 +2132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2160,7 +2152,7 @@
        "Name: AveragePrice, Length: 18249, dtype: bool"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2172,7 +2164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2448,7 +2440,7 @@
        "[2796 rows x 14 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2460,7 +2452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2736,7 +2728,7 @@
        "[9123 rows x 14 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2748,7 +2740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -3024,7 +3016,7 @@
        "[540 rows x 14 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3036,7 +3028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -3312,7 +3304,7 @@
        "[270 rows x 14 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3324,7 +3316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -3600,7 +3592,7 @@
        "[676 rows x 14 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3613,7 +3605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -3889,7 +3881,7 @@
        "[420 rows x 14 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3903,7 +3895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -4166,7 +4158,7 @@
        "[18249 rows x 14 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4177,7 +4169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -4200,7 +4192,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4212,7 +4204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -4235,7 +4227,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4254,7 +4246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -4530,7 +4522,7 @@
        "[18249 rows x 14 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4548,7 +4540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -4836,7 +4828,7 @@
        "[18249 rows x 15 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4849,7 +4841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -5125,7 +5117,7 @@
        "[18249 rows x 14 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5139,7 +5131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -5148,7 +5140,7 @@
        "1.405978409775878"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5160,7 +5152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -5169,7 +5161,7 @@
        "'2018-03-25'"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5180,7 +5172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -5211,13 +5203,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>pct30</th>\n",
-       "      <td>1.66</td>\n",
-       "      <td>110783.370</td>\n",
+       "      <td>1.15</td>\n",
+       "      <td>7316.634</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>pct50</th>\n",
-       "      <td>0.93</td>\n",
-       "      <td>1299.208</td>\n",
+       "      <td>1.37</td>\n",
+       "      <td>39743.830</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -5225,11 +5217,11 @@
       ],
       "text/plain": [
        "       AveragePrice  Total Bags\n",
-       "pct30          1.66  110783.370\n",
-       "pct50          0.93    1299.208"
+       "pct30          1.15    7316.634\n",
+       "pct50          1.37   39743.830"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5237,17 +5229,17 @@
    "source": [
     "def pct30(column):     \n",
     "    #return the 0.3 quartile\n",
-    "    return column.quantile(0.75)\n",
+    "    return column.quantile(0.3)\n",
     "def pct50(column):     \n",
     "    #return the 0.5 quartile\n",
-    "    return column.quantile(0.1)\n",
+    "    return column.quantile(0.5)\n",
     "\n",
     "avocado[[\"AveragePrice\",\"Total Bags\"]].agg([pct30,pct50])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -5385,7 +5377,7 @@
        "8478  2018  Albany               157.0  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5397,7 +5389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 37,
    "metadata": {
     "scrolled": true
    },
@@ -5412,7 +5404,7 @@
        "Name: year, dtype: int64"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5423,8 +5415,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pivot tables"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 38,
    "metadata": {
     "scrolled": true
    },
@@ -5556,7 +5555,7 @@
        "     organic              1.01         2.30     1.567176         1.55"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5568,7 +5567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -5864,7 +5863,7 @@
        "[18249 rows x 14 columns]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5876,7 +5875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -6164,7 +6163,7 @@
        "[673 rows x 15 columns]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6176,7 +6175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -6472,7 +6471,7 @@
        "[673 rows x 14 columns]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6491,7 +6490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -6514,7 +6513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -6534,7 +6533,7 @@
        "Name: AveragePrice, dtype: float64"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6546,16 +6545,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x16f2e6bee88>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x2766601e508>"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -6578,16 +6577,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x16f2e6968c8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x276660df6c8>"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -6610,7 +6609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -6630,7 +6629,7 @@
        "Name: AveragePrice, Length: 18249, dtype: float64"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
