--- a/basic_datascience/pandas_practice/HandleMissingData.ipynb
+++ b/basic_datascience/pandas_practice/HandleMissingData.ipynb
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -744,12 +744,6 @@
        "      <th>windspeed</th>\n",
        "      <th>event</th>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>day</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
@@ -757,6 +751,18 @@
        "      <td>32.000000</td>\n",
        "      <td>6.00</td>\n",
        "      <td>Rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-01-02</th>\n",
+       "      <td>31.000000</td>\n",
+       "      <td>7.00</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-01-03</th>\n",
+       "      <td>30.000000</td>\n",
+       "      <td>8.00</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2017-01-04</th>\n",
@@ -812,8 +818,9 @@
       ],
       "text/plain": [
        "            temperature  windspeed   event\n",
-       "day                                       \n",
        "2017-01-01    32.000000       6.00    Rain\n",
+       "2017-01-02    31.000000       7.00     NaN\n",
+       "2017-01-03    30.000000       8.00     NaN\n",
        "2017-01-04    29.000000       9.00   Sunny\n",
        "2017-01-05    28.000000       8.00    Snow\n",
        "2017-01-06    30.000000       7.00     NaN\n",
@@ -824,13 +831,13 @@
        "2017-01-11    40.000000      12.00   Sunny"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#interpolate\n",
+    "#Interpolation is the process of estimating unknown values that fall between known values.\n",
     "new_df4 = df.interpolate(method=\"time\")\n",
     "new_df4"
    ]
@@ -1141,6 +1148,465 @@
     "df = df.reindex(idx)\n",
     "df"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Handling negative values, outliers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>day</th>\n",
+       "      <th>temperature</th>\n",
+       "      <th>windspeed</th>\n",
+       "      <th>event</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1/1/2017</td>\n",
+       "      <td>32</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1/2/2017</td>\n",
+       "      <td>-99999</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Sunny</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1/3/2017</td>\n",
+       "      <td>28</td>\n",
+       "      <td>-8888</td>\n",
+       "      <td>Snow</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1/4/2017</td>\n",
+       "      <td>-99999</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1/5/2017</td>\n",
+       "      <td>32</td>\n",
+       "      <td>-99999</td>\n",
+       "      <td>Rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1/6/2017</td>\n",
+       "      <td>31</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Sunny</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1/6/2017</td>\n",
+       "      <td>34</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        day  temperature  windspeed  event\n",
+       "0  1/1/2017           32          6   Rain\n",
+       "1  1/2/2017       -99999          7  Sunny\n",
+       "2  1/3/2017           28      -8888   Snow\n",
+       "3  1/4/2017       -99999          7      0\n",
+       "4  1/5/2017           32     -99999   Rain\n",
+       "5  1/6/2017           31          2  Sunny\n",
+       "6  1/6/2017           34          5      0"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2 = pd.read_csv(\"weather2.csv\")\n",
+    "df2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>day</th>\n",
+       "      <th>temperature</th>\n",
+       "      <th>windspeed</th>\n",
+       "      <th>event</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1/1/2017</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>Rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1/2/2017</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>Sunny</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1/3/2017</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Snow</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1/4/2017</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1/5/2017</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1/6/2017</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>Sunny</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1/6/2017</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        day  temperature  windspeed  event\n",
+       "0  1/1/2017         32.0        6.0   Rain\n",
+       "1  1/2/2017          NaN        7.0  Sunny\n",
+       "2  1/3/2017         28.0        NaN   Snow\n",
+       "3  1/4/2017          NaN        7.0    NaN\n",
+       "4  1/5/2017         32.0        NaN   Rain\n",
+       "5  1/6/2017         31.0        2.0  Sunny\n",
+       "6  1/6/2017         34.0        5.0    NaN"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#new_df6 = df2.replace([-99999, -8888, 0], np.NaN)\n",
+    "new_df6 = df2.replace({\n",
+    "    'temperature': -99999,\n",
+    "    'windspeed': [-99999, -8888],\n",
+    "    'event': '0'\n",
+    "}, np.NaN)\n",
+    "new_df6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>day</th>\n",
+       "      <th>temperature</th>\n",
+       "      <th>windspeed</th>\n",
+       "      <th>event</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1/1/2017</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>Rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1/2/2017</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>Sunny</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1/3/2017</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Snow</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1/4/2017</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1/5/2017</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>Rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1/6/2017</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>Sunny</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1/6/2017</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        day  temperature  windspeed  event\n",
+       "0  1/1/2017         32.0        6.0   Rain\n",
+       "1  1/2/2017       1000.0        7.0  Sunny\n",
+       "2  1/3/2017         28.0        NaN   Snow\n",
+       "3  1/4/2017       1000.0        7.0      0\n",
+       "4  1/5/2017         32.0     1000.0   Rain\n",
+       "5  1/6/2017         31.0        2.0  Sunny\n",
+       "6  1/6/2017         34.0        5.0      0"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Another way to replace values\n",
+    "new_df7 = df2.replace({\n",
+    "    -99999: 1000,\n",
+    "    -8888: np.NaN\n",
+    "})\n",
+    "new_df7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>day</th>\n",
+       "      <th>temperature</th>\n",
+       "      <th>windspeed</th>\n",
+       "      <th>event</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1/1/2017</td>\n",
+       "      <td>32</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1/2/2017</td>\n",
+       "      <td>-99999</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Sunny</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1/3/2017</td>\n",
+       "      <td>28</td>\n",
+       "      <td>-8888</td>\n",
+       "      <td>Snow</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1/4/2017</td>\n",
+       "      <td>-99999</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1/5/2017</td>\n",
+       "      <td>32</td>\n",
+       "      <td>-99999</td>\n",
+       "      <td>Rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1/6/2017</td>\n",
+       "      <td>31</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Sunny</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1/6/2017</td>\n",
+       "      <td>34</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        day  temperature  windspeed  event\n",
+       "0  1/1/2017           32          6   Rain\n",
+       "1  1/2/2017       -99999          7  Sunny\n",
+       "2  1/3/2017           28      -8888   Snow\n",
+       "3  1/4/2017       -99999          7      0\n",
+       "4  1/5/2017           32     -99999   Rain\n",
+       "5  1/6/2017           31          2  Sunny\n",
+       "6  1/6/2017           34          5      0"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
