Adding Concat and Merge practice

--- a/basic_datascience/pandas_practice/GroupBy.ipynb
+++ b/basic_datascience/pandas_practice/GroupBy.ipynb
@@ -4713,7 +4713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -5914,12 +5914,13 @@
        "[39 rows x 320 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# basic about each column\n",
     "g.describe()"
    ]
   },
